# faasm

./: docker-compose.yml
cmake/: ExternalProjects.cmake
func/: CMakeLists.txt
func/ndp/: CMakeLists.txt  get_simple.cpp  ndpapi.h  put_simple.cpp  wordcount.cpp  wordcount_manual_ndp.cpp
include/faaslet/: NdpBuiltinModule.h
include/wasm/: chaining.h  ndp.h
include/wavm/: WAVMWasmModule.h
src/faaslet/: CMakeLists.txt  Faaslet.cpp  NdpBuiltinModule.cpp
src/runner/: CMakeLists.txt  codegen_func.cpp  codegen_shared_obj.cpp  func_runner.cpp  func_sym.cpp  pool_runner.cpp  simple_runner.cpp
src/upload/: upload_server.cpp
src/wasm/: chaining_util.cpp
src/wavm/: CMakeLists.txt  WAVMWasmModule.cpp  mpi.cpp  ndp_objects.cpp  syscalls.cpp  syscalls.h
tests/test/: main.cpp
